add sentence documentation

--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -67,20 +67,44 @@ def to_csv_date(df, filename):
 \section{ドキュメンテーション}
 前の課題では、コード規約について取り上げたが、今回のトピックもコード規約と同じく、自分がコードを書いたときに人に読んでもらいやすくするために必要な「ドキュメンテーション」について取り上げる。
 
-コメントの書き方一つをとっても、
+コード規約にのっとったコードを書いて読みやすくなったとしても、他の人が書いたコードを1からすべてに目を通して理解するといったことは現実的ではない。実際にライブラリを使うときにライブラリの実装コードをすべて見て理解してから使うのでは効率的とは言えない使い方になってしまう。そのようなときに、関数ごとにまとめられたドキュメントがあると、使いたい関数の検索性も高まり、理解したい部分を効率的に理解できるなど重要性を強く感じることができる。さらに、コード中に組み込むことで関数間の関係性も維持したまま、抜け漏れがなく書ける工夫もとても興味深く重要なものであると感じた。
 
 \subsection{コメント}
+コメント一つをとっても、良いコメントと悪いコメントが存在する。私も漠然と他の人が書いているコードを読みながら意識していたところでもあったが、それらが文面上で講義内では示していただいていて、納得できるとともに今後のコメントを書く上での指針にしようと感じた。実際にそのコードが行っている処理内容に関して記述するのであれば、1行ずつコードを読んでいくことと大差ない。その一方、そのコードが存在する理由を書くことで、コードのかたまりとしての概観をつかむことができるので、可読性をあげることができると感じる。
 
 \subsection{docstring}
+ドキュメントを作成するということは、リファレンスマニュアルを作ることになるが、関数名とその機能、引数と返り値をはじめとした使用例といった、関数やクラスの仕様を説明するためのコメントとして、docstring というものがある。これらの基本要素は決まっているので、VScodeにはそれを自動生成する Python Docstring Generatorがあり、この講義を通して知ったので、実際に導入してこのレポートで後述するドキュメント作成にも活用した。このように、フォーマットが決まっていることによって、関数によって説明する内容がばらばらになるということを防ぎ、統一感の説明をしやすくできるという点で重要であるといえる。
 
 \subsection{ドキュメント作成ツール}
+ドキュメントをコードと別々に作成していては、作業量が倍になるだけではなく、一方の更新や作成のし忘れが起こりやすくなってしまう。そこで、コード内に書いたコメントからドキュメントを生成するツールとして、Doxygen と Sphinx があげられる。
 
-\subsection{Sph}
+Doxygenは、C/C++を用いた開発を部活で行っていた際に使っていたため、知っているが、コード内にコメントとして加えるだけでhtmlが作成されプログラム外からその関数の特性や、探したい関数を見つけやすくなった点で、一覧性と検索性の2点から優れていたと感じる。しかし、毎回 @ からはじめなければいけない点はコードを書く上で煩雑さを感じた。
+
+次に、Sphinxについてはこの講義で名前については知ったが、スライドを見たらドキュメントで良くみたことのある形式であり、それらのライブラリがSphinxで書かれていたことを知りSphinxの人気の高さを実感した。コメントとしても、前述の拡張機能と合わせて最小限のコードで書くことができるようにも感じる。
+
+\subsection{Sphinx を用いた実践}
+前課題につづいて、自作した3つの関数についてのドキュメントをSphinxを用いて生成を行ったところ図\ref{fig:sphinx}のように生成することができた。Sphinxを使ったことは講義前はなかったが、実際に使ってみて使いやすさを感じたので、今後の自分が関わるプロジェクトでもこのようにドキュメントを作成していき、共有しやすくできるようにしたいと感じた。(これらのコード,htmlに関しても後述するgithubにpushしている)
+
+\begin{figure}[htbp]
+  \includegraphics[width=6.0cm]{./sphinx.png}
+  \caption{Sphinxを用いた自作関数のドキュメント}
+  \label{fig:sphinx}
+\end{figure}
+
 
 
 \newpage
 \section{バージョン管理・GitHub}
+\subsection{バージョン管理}
 
+
+\subsection{Git VScode拡張機能}
+
+
+\subsection{Github}
+
+
+\subsection{Github 実践}
 
 
 \newpage
